eww: fix blurry workspace icons on HiDPI

--- a/.config/eww/eww.scss
+++ b/.config/eww/eww.scss
@@ -56,6 +56,11 @@ window {
 
         .ws-icon {
             margin: 0 2px;
+            min-width: 18px;
+            min-height: 18px;
+            background-size: contain;
+            background-repeat: no-repeat;
+            background-position: center;
         }
     }
 }
